# cta-discord-rust

./: .dockerignore  .envrc  .gitignore  Cargo.nix  Cargo.toml  Dockerfile  devshell.nix  flake.nix  module.nix  shell.nix
.cargo/: config.toml
.sqlx/: query-399f55f2efa5724309a1f8c9cf5b17344932acd58507ed8e49dcc22af15291e9.json  query-7017ab629d7b3b50eb008073a09b9aa63aaf119ca71d43ab2a80788535b30263.json  query-88bfbed0fed0ad673fbeb180f1e651d51405ef6b9422e36604dea9ca8ce53d2e.json  query-a15bb8c0f8206f895aafb76005694339345e002ff942ca6d15dae54bae5e0a9f.json  query-a9d2f7f577f18df1fb7fcd6a66dc004b89537139e6f334b9f56521f823091075.json  query-b6f78ce55f8bd99708c6e260c693e00492ef84bbae6c278a76211a07d353378e.json  query-e6fbebdebb838e9aab31eba4fbaf4b84f4f2a7de0135838b855395635bbf11e0.json
migrations/: 20250808183338_init.sql  20251018182745_make_database_alerts_required_fields.sql  20251018222230_create_current_alerts_table.sql  20251018232544_remove_dates_from_alerts.sql  20251018234326_impacted_services_into_array.sql
src/: main.rs  watcher.rs
src/arrivaldisplay/: mod.rs
src/commands/: alerts.rs  arrivals.rs  autocomplete.rs  broadcast.rs  bus.rs  get_train.rs  mod.rs  ping.rs  route_name.rs
src/cta/: alerts.rs  analysis.rs  bustracker.rs  gtfs.rs  mod.rs  stations.rs  traintracker.rs
src/db/: mod.rs
src/util/: mod.rs
