[package]
name = "cta-discord-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
gtfs-structures = "0.43.0"
serde = "1.0.217"
serde_with = "3.12.0"
reqwest = "0.12.12"
serde_json = "1.0.138"
chrono = { version = "0.4.39", features = ["serde"] }
thiserror = "2.0.11"
clippy = "0.0.302"
chrono-tz = "0.10.3"
svg = "0.18.0"
resvg = "0.45.0"
serde_variant = "0.1.3"
fontdb = "0.23.0"
png = "0.17.16"
